# sfml-conan-cmake-starter

./: .gitignore  CMakeLists.txt  build-windows.py  conanfile.txt
include/: Basic.hpp
src/: Basic.cpp  main.cpp
